# prpra-mandelbrot

./: CMakeLists.txt  README.md
src/: render.cpp  view.cpp
